@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:29:08
+ * Today is: Thursday, the 17 of May, 2012; 21:47:49
  *
  * XPS project directory: Xilinx-ML605-AXI-lite-13.2
  */
@@ -50,7 +50,7 @@
 		reg = < 0x20000000 0x10000000 >;
 	} ;
 	chosen {
-		bootargs = "console=ttyUL0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyUL0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/axi@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -166,7 +166,7 @@
 			device_type = "network";
 			interrupt-parent = <&axi_intc_0>;
 			interrupts = < 3 0 >;
-			local-mac-address = [ 00 0a 35 54 f6 00 ];
+			local-mac-address = [ 00 0a 35 e4 17 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x10000 >;
 			xlnx,duplex = <0x1>;
